# jacobi-roots

./: .travis.yml  JacobiRoots.hs  Makefile  README.md  compute_roots.nb  jacobi-roots.cabal
exports/: Makefile  ToC.hs  ToPy.hs  foo.c
src/: JacobiRoots.hs  JacobiRootsRaw.hs
tests/: doctests.hs
